--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.82.0",
+    "@types/dom-speech-recognition": "^0.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "D": "^1.0.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
